--- a/docker-file.yaml
+++ b/docker-file.yaml
@@ -38,6 +38,25 @@ services:
     links:
     - videojuegos_db:db
     restart: always
+  consolas:
+    image: amazoncorretto:17
+    networks:
+    - network_apis
+    volumes:
+    - ./apps:/apps
+    ports:
+    - 8082:8082
+    environment:
+      MYSQL_HOST: db
+    command:
+    - java
+    - -jar
+    - /apps/ConsolasAPI.jar
+    depends_on:
+    - consolas_db
+    links:
+    - consolas_db:db
+    restart: always
   gadgets_db:
     image: mariadb
     networks:
@@ -56,5 +75,14 @@ services:
     volumes:
     - ./apps/videojuegos:/docker-entrypoint-initdb.d
     - ./apps/videojuegos/data:/var/lib/mysql
+  consolas_db:
+    image: mariadb
+    networks:
+      - network_apis
+    environment:
+      MARIADB_ROOT_PASSWORD: 123456
+    volumes:
+    - ./apps/consolas:/docker-entrypoint-initdb.d
+    - ./apps/consolas/data:/var/lib/mysql
 networks:
   network_apis:
